# ResearchMate

./: .gitignore  CHANGELOG.md  DEMO_GUIDE.md  OPERATION_MANUAL.md  PRD.md  PROJECT_STATUS.md  README.md  TECHNICAL_ARCHITECTURE.md  TEST_CASES_V1_1.md  VERSION_PLAN.md  byte_level_fix.py  feature_overview.md  final_solution.py  fix_additional.py  fix_quotes.py  fix_v7_complete.py  fix_v7_force.py  fix_v7_jsx.py  render.yaml  smart_fix.py  tech_architecture.md  test_monitor.py  test_news_expansion.py  ultimate_final_fix.py
backend/: .env.example  README.md  constraints.txt  fix_and_start.py  init_emotion_data.py  init_news_data.py  main.py  pyproject.toml  quick_test.py  requirements.txt  reset_password.py  run_scheduler.py  test_real_emotion.py  wrangler.toml
backend/app/: database.py
backend/app/models/: emotion.py  financial_report.py  follow.py  news.py  user.py
backend/app/providers/: akshare_provider.py  alpha_vantage_provider.py  yahoo_finance_provider.py
backend/app/routes/: analysis.py  auth.py  data.py  emotion.py  monitor.py  news.py  reports.py
backend/app/schemas/: emotion.py  follow.py  news.py  report.py  user.py
backend/app/services/: analysis_service.py  data_monitor.py  email_service.py  emotion_service.py  follow_service.py  news_scheduler.py  news_service.py  real_emotion_service.py  report_service.py  user_service.py
backend/app/utils/: ai_client.py  auth.py  news_generator.py  pdf_parser.py  sentiment_analyzer.py  smart_cache.py
backend/tests/: test_auth.py  test_emotion.py  test_news.py  test_reports.py
docs/: ERROR_TROUBLESHOOTING.md  FEATURE_MAP.md  PRD.md  TECHNICAL.md
frontend/: README.md  next.config.js  package-lock.json  package.json  (+4 more)
(+22 files in other folders)
