[project]
name = "researchmate-backend"
version = "1.0.0"
description = "ResearchMate backend API"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "pydantic==2.6.4",
    "sqlalchemy==2.0.27",
    "greenlet==3.0.3",
    "python-dotenv==1.0.0",
    "PyPDF2==2.12.1",
    "aiofiles==23.2.1",
    "pyjwt==2.8.0",
]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"