[project]
name = "researchmate-backend"
version = "1.0.0"
description = "ResearchMate backend API"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "greenlet>=3.0.0",
    "python-dotenv>=1.0.0",
    "PyPDF2>=2.0.0",
    "aiofiles>=23.0.0",
    "pyjwt>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"