[project]
name = "researchmate-backend"
version = "1.0.0"
description = "ResearchMate backend API"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.99.1",
    "uvicorn==0.29.0",
    "pydantic==1.10.13",
    "sqlalchemy==1.4.49",
    "greenlet==2.0.2",
    "python-dotenv==1.0.0",
    "PyPDF2==2.12.1",
    "aiofiles==23.2.1",
    "pyjwt==2.8.0",
    "email-validator==2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"